# UNIXBasicFunction

./: README.md
Tee/: CMakeLists.txt  main.cpp
